tests/067.solrquery__construct.out
Fatal error: Uncaught exception 'SolrIllegalArgumentException' with message 'SolrQuery::setQuery() expects parameter 1 to be string, object given' in /home/grim/c-workspace/php-src/ext/solr/tests/067.solrquery__construct.php:7
Stack trace:
#0 /home/grim/c-workspace/php-src/ext/solr/tests/067.solrquery__construct.php(7): SolrQuery->setQuery(Object(stdClass))
#1 {main}
  thrown in /home/grim/c-workspace/php-src/ext/solr/tests/067.solrquery__construct.php on line 7