tests/067.solrquery__construct.php
<?php

//$doc = new SolrInputDocument();

$query = new SolrQuery();

$query->setQuery(new StdClass());

?>
